tests/outref/TSIT07.ref
OCTO> SELECT *
OCTO> FROM names n1
OCTO> INNER JOIN (SELECT *
OCTO>             FROM names n2
OCTO>             WHERE n1.id = n2.id
OCTO> 
OCTO>             UNION
OCTO> 
OCTO>             SELECT *
OCTO>             FROM names n3
OCTO>             WHERE n1.id = n3.id
OCTO>            ) as n4
OCTO> ON n4.id = n1.id;
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 5, column 19):

SELECT *
FROM names n1
INNER JOIN (SELECT *
            FROM names n2
            WHERE n1.id = n2.id
                  ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Missing FROM-clause entry for table : N1
Error with syntax near (line 9, column 19):

SELECT *
FROM names n1
INNER JOIN (SELECT *
            FROM names n2
            WHERE n1.id = n2.id
            UNION
            SELECT *
            FROM names n3
            WHERE n1.id = n3.id
                  ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT *
FROM names n1
INNER JOIN (SELECT *
            FROM names n2
            WHERE n1.id = n2.id
            UNION
            SELECT *
            FROM names n3
            WHERE n1.id = n3.id
           ) as n4
ON n4.id = n1.id;

OCTO> 
